--- a/style/originaux/index.css
+++ b/style/originaux/index.css
@@ -57,7 +57,7 @@ ul {
     color:#533483;
     font-weight:600;
     display:block;
-    width:47.8%;
+    width:47.5%;
     padding:.8em;
 }
 
@@ -73,7 +73,7 @@ ul {
 .teaching-section li {
     display:block;
     height:135px;
-    width:47.8%;
+    width:47.5%;
     padding:.2em;
     margin:4px;
     color:#fff;
